--- a/.github/workflows/mvn-poc.yml
+++ b/.github/workflows/mvn-poc.yml
@@ -35,6 +35,11 @@ jobs:
       timeout-minutes: 5
       env:
        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+    - name: execute py script
+      run:  |
+        python poc_sonar.py
+      env:
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
     - name: Publish package
       run: mvn --batch-mode deploy
       env:
