--- a/.github/workflows/mvn-poc.yml
+++ b/.github/workflows/mvn-poc.yml
@@ -22,8 +22,28 @@ jobs:
         java-version: '11'
         distribution: 'adopt'
         cache: maven
-    - name : Build with Maven
+    - name: Build with Maven
       run: mvn -B package --file pom.xml
+      
+    - name: kubectl install
+      uses: Azure/setup-kubectl@v1
+      with:
+          version: latest
+          
+    - name: Tanzu Install
+      run: |
+         curl -H "Accept: application/vnd.github.v3.raw" \-L https://api.github.com/repos/vmware-tanzu/community-edition/contents/hack/get-tce-release.sh | \bash -s v0.9.1 linux
+         tar xzvf ~/<DOWNLOAD-DIR>/tce-linux-amd64-v0.9.1.tar.gz
+         cd tce-linux-amd64-v0.9.1
+         ./install.sh
+         tanzu version
+         tanzu plugin list
+         curl -H "Accept: application/vnd.github.v3.raw" \-L https://api.github.com/repos/vmware-tanzu/community-edition/contents/hack/get-tce-release.sh | \bash -s v0.9.1 linux
+tar xzvf ~/<DOWNLOAD-DIR>/tce-linux-amd64-v0.9.1.tar.gz
+cd tce-linux-amd64-v0.9.1
+./install.sh
+tanzu version
+tanzu plugin list
     - name: SonarQube Scan
       uses: sonarsource/sonarqube-scan-action@master
       env:
