--- a/.github/workflows/mvn-poc.yml
+++ b/.github/workflows/mvn-poc.yml
@@ -33,7 +33,7 @@ jobs:
     - name: Tanzu Install
       run: |
          curl -H "Accept: application/vnd.github.v3.raw" \-L https://api.github.com/repos/vmware-tanzu/community-edition/contents/hack/get-tce-release.sh | \bash -s v0.9.1 linux
-         tar xzvf ~/<DOWNLOAD-DIR>/tce-linux-amd64-v0.9.1.tar.gz
+         tar xzvf tce-linux-amd64-v0.9.1.tar.gz
          cd tce-linux-amd64-v0.9.1
          ./install.sh
          tanzu version
