--- a/.github/workflows/mvn-poc.yml
+++ b/.github/workflows/mvn-poc.yml
@@ -40,6 +40,7 @@ jobs:
          tanzu plugin list
          
     - name: Set env variable and proxy
+      uses: Azure/setup-kubectl@v1
       env:
         First_Name: SET TkG_SYSTEM_
         Middle_Name: The
