--- a/.github/workflows/mvn-poc.yml
+++ b/.github/workflows/mvn-poc.yml
@@ -45,6 +45,11 @@ jobs:
         First_Name: SET TkG_SYSTEM_
         Middle_Name: The
         Last_Name: Octocat
+        Proxy: http://htttp-proxy.ntrs.com:443/
+        
+   # - name: Login to Tanzu Cluster
+    #  run: |
+     #   tanzu login --endpoint 
    
     - name: SonarQube Scan
       uses: sonarsource/sonarqube-scan-action@master
