--- a/.github/workflows/mvn-poc.yml
+++ b/.github/workflows/mvn-poc.yml
@@ -45,8 +45,8 @@ jobs:
        # First_Name: SET TkG_SYSTEM_
        # Middle_Name: The
        # Last_Name: Octocat
-       TKG_CUSTOM_IMAGE_REPOSITORY_SKIP_TLS_VERIFY=true
-       https_proxy=http://http-proxy.ntrs.com:443/
+       TKG_CUSTOM_IMAGE_REPOSITORY_SKIP_TLS_VERIFY: true
+       https_proxy=http://http-proxy.ntrs.com: 443/
       run: echo $TKG_CUSTOM_IMAGE_REPOSITORY_SKIP_TLS_VERIFY
      #   Proxy: http://htttp-proxy.ntrs.com:443/
         
