--- a/.github/workflows/mvn-poc.yml
+++ b/.github/workflows/mvn-poc.yml
@@ -47,7 +47,7 @@ jobs:
        # Last_Name: Octocat
        TKG_CUSTOM_IMAGE_REPOSITORY_SKIP_TLS_VERIFY: true
        https_proxy=http://http-proxy.ntrs.com: 443/
-      run: echo $TKG_CUSTOM_IMAGE_REPOSITORY_SKIP_TLS_VERIFY
+     # run: echo $TKG_CUSTOM_IMAGE_REPOSITORY_SKIP_TLS_VERIFY
      #   Proxy: http://htttp-proxy.ntrs.com:443/
         
     - name: Login to Tanzu Cluster
