--- a/.github/workflows/mvn-poc.yml
+++ b/.github/workflows/mvn-poc.yml
@@ -25,10 +25,21 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
       
-    - name: kubectl install
-      uses: Azure/setup-kubectl@v1
+    - uses: actions/checkout@v2
+    - name: Run Kubernetes tools
+      uses: grebois/kube-tools@v1.5.2
       with:
-          version: latest
+          kubectl: 1.18.2
+          kustomize: 3.5.5
+          helm: 2.16.7
+          helmv3: 3.2.1
+          kubeseal: 0.12.5
+          kubeaudit: 0.11.5
+          command: |
+            echo "Run conftest"
+            kustomize build test/kustomize | conftest test -p test/policy -
+            echo "Run kubeval"
+            helmv3 template ./charts/test | kubeval --strict
           
     - name: Tanzu Install
       run: |
