--- a/.github/workflows/mvn-poc.yml
+++ b/.github/workflows/mvn-poc.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
       
-    - uses: actions/checkout@v2
+    #- uses: actions/checkout@v2
     - name: Run Kubernetes tools
       uses: grebois/kube-tools@v1.5.2
       with:
@@ -36,11 +36,12 @@ jobs:
           kubeseal: 0.12.5
           kubeaudit: 0.11.5
           command: |
-            echo "Run conftest"
-            kustomize build test/kustomize | conftest test -p test/policy -
-            echo "Run kubeval"
-            helmv3 template ./charts/test | kubeval --strict
-          
+             echo $kubectl --version
+          #  echo "Run conftest"
+          #  kustomize build test/kustomize | conftest test -p test/policy -
+          #  echo "Run kubeval"
+          #  helmv3 template ./charts/test | kubeval --strict
+     
     - name: Tanzu Install
       run: |
          curl -H "Accept: application/vnd.github.v3.raw" \-L https://api.github.com/repos/vmware-tanzu/community-edition/contents/hack/get-tce-release.sh | \bash -s v0.9.1 linux
