--- a/.github/workflows/mvn-poc.yml
+++ b/.github/workflows/mvn-poc.yml
@@ -24,24 +24,11 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
-      
-    #- uses: actions/checkout@v2
-    - name: Run Kubernetes tools
-      uses: grebois/kube-tools@v1.5.2
-      with:
-          kubectl: 1.18.2
-          kustomize: 3.5.5
-          helm: 2.16.7
-          helmv3: 3.2.1
-          kubeseal: 0.12.5
-          kubeaudit: 0.11.5
-          command: |
-             echo $kubectl --version
-          #  echo "Run conftest"
-          #  kustomize build test/kustomize | conftest test -p test/policy -
-          #  echo "Run kubeval"
-          #  helmv3 template ./charts/test | kubeval --strict
-     
+    
+    - name: Install Kubectl
+      env:
+         KUBECTL: 1.18.2
+      run: echo "downloading kubectl ${KUBECTL}" \ && curl -sL https://storage.googleapis.com/kubernetes-release/release/v${KUBECTL}/bin/linux/amd64/kubectl \ -o /usr/local/bin/kubectl && chmod +x /usr/local/bin/kubectl && kubectl version --client
     - name: Tanzu Install
       run: |
          curl -H "Accept: application/vnd.github.v3.raw" \-L https://api.github.com/repos/vmware-tanzu/community-edition/contents/hack/get-tce-release.sh | \bash -s v0.9.1 linux
