--- a/.github/workflows/mvn-poc.yml
+++ b/.github/workflows/mvn-poc.yml
@@ -26,8 +26,16 @@ jobs:
       run: mvn -B package --file pom.xml
     
     - name: Install Kubectl
-      run:
+      run: |
          curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
+         curl -LO "https://dl.k8s.io/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl.sha256"
+         echo "$(<kubectl.sha256)  kubectl" | sha256sum --check
+         sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
+         chmod +x kubectl
+         mkdir -p ~/.local/bin/kubectl
+         mv ./kubectl ~/.local/bin/kubectl
+         kubectl version --client
+
     - name: Tanzu Install
       run: |
          curl -H "Accept: application/vnd.github.v3.raw" \-L https://api.github.com/repos/vmware-tanzu/community-edition/contents/hack/get-tce-release.sh | \bash -s v0.9.1 linux
