--- a/.github/workflows/mvn-poc.yml
+++ b/.github/workflows/mvn-poc.yml
@@ -29,12 +29,11 @@ jobs:
       run: |
          curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
          curl -LO "https://dl.k8s.io/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl.sha256"
-         echo "$(<kubectl.sha256)  kubectl" | sha256sum --check
          sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
          chmod +x kubectl
          mkdir -p ~/.local/bin/kubectl
          mv ./kubectl ~/.local/bin/kubectl
-         kubectl version
+         echo "$(<kubectl.sha256)  kubectl" | sha256sum --check && kubectl version --client
 
     - name: Tanzu Install
       run: |
