--- a/.github/workflows/mvn-poc.yml
+++ b/.github/workflows/mvn-poc.yml
@@ -35,6 +35,12 @@ jobs:
          mkdir -p ~/.local/bin/kubectl
          mv ./kubectl ~/.local/bin/kubectl
          kubectl version --client
+    
+    - name: Kustomize
+      env:
+         KUSTOMIZE: 3.5.5
+      run : 
+         echo "downloading kustomize ${KUSTOMIZE}" \ && curl -sL https://github.com/kubernetes-sigs/kustomize/releases/download/kustomize%2Fv${KUSTOMIZE}/kustomize_v${KUSTOMIZE}_linux_amd64.tar.gz | \tar xz && mv kustomize /usr/local/bin/kustomize && kustomize version
 
     - name: Tanzu Install
       run: |
