--- a/.github/workflows/mvn-poc.yml
+++ b/.github/workflows/mvn-poc.yml
@@ -24,24 +24,51 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
-    
+     
     - name: Install Kubectl
-      run: |
-         curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
-         curl -LO "https://dl.k8s.io/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl.sha256"
-         echo "$(<kubectl.sha256)  kubectl" | sha256sum --check
-         sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
-         chmod +x kubectl
-         mkdir -p ~/.local/bin/kubectl
-         mv ./kubectl ~/.local/bin/kubectl
-         kubectl version --client
-    
-    - name: Kustomize
-      env:
+      env:  
+        KUBECTL: 1.18.2
+      run:  
+         echo "downloading kubectl ${KUBECTL}" \ && curl -sL https://storage.googleapis.com/kubernetes-release/release/v${KUBECTL}/bin/linux/amd64/kubectl \ -o /usr/local/bin/kubectl && chmod +x /usr/local/bin/kubectl && kubectl version --client
+    - name: Install Kustomize 
+      env:  
          KUSTOMIZE: 3.5.5
-      run : 
-         echo "downloading kustomize ${KUSTOMIZE}" \ && curl -sL https://github.com/kubernetes-sigs/kustomize/releases/download/kustomize%2Fv${KUSTOMIZE}/kustomize_v${KUSTOMIZE}_linux_amd64.tar.gz | \tar xz && mv kustomize /usr/local/bin/kustomize && kustomize version
+      run:  
+         echo "downloading kustomize ${KUSTOMIZE}" \ && curl -sL https://github.com/kubernetes-sigs/kustomize/releases/download/kustomize%2Fv${KUSTOMIZE}/kustomize_v${KUSTOMIZE}_linux_amd64.tar.gz | \ tar xz && mv kustomize /usr/local/bin/kustomize && kustomize version
+    - name: Helm Installation
+      env:  
+         HELM_V2: 2.16.7
+      run:  echo "downloading helm ${HELM_V2}" && curl -sSL https://get.helm.sh/helm-v${HELM_V2}-linux-amd64.tar.gz | \ tar xz && mv linux-amd64/helm /usr/local/bin/helm && rm -rf linux-amd64 && helm version --client
+ 
+    - name: Helm V3 Installation
+      env:  
+         HELM_V3: 3.2.1
+      run:  echo "downloading helm ${HELM_V3}" && curl -sSL https://get.helm.sh/helm-v${HELM_V3}-linux-amd64.tar.gz | \ tar xz && mv linux-amd64/helm /usr/local/bin/helmv3 && rm -rf linux-amd64 && helmv3 version
+ 
+    - name: KubeVal Installation
+      env:  
+         KUBEVAL: 0.15.0
+      run:  echo "downloading kubeval ${KUBEVAL}" && curl -sL https://github.com/instrumenta/kubeval/releases/download/${KUBEVAL}/kubeval-linux-amd64.tar.gz | \ tar xz && mv kubeval /usr/local/bin/kubeval && kubeval --version
 
+    - name: Kubeaudit Installation 
+      env:  
+          KUBEAUDIT: 0.11.5
+      run:  echo "downloading kubeaudit ${KUBEAUDIT}" && curl -sSL https://github.com/Shopify/kubeaudit/releases/download/v${KUBEAUDIT}/kubeaudit_${KUBEAUDIT}_linux_amd64.tar.gz | \ tar xz && mv kubeaudit /usr/local/bin/kubeaudit && kubeaudit --help
+
+    - name: Conftest Installation
+      env:  
+         CONFTEST: 0.19.0
+      run:  echo "downloading conftest ${CONFTEST}" && curl -sL https://github.com/open-policy-agent/conftest/releases/download/v${CONFTEST}/conftest_${CONFTEST}_Linux_x86_64.tar.gz | \ tar xz && mv conftest /usr/local/bin/conftest && conftest --version
+
+    - name: Kubeseal Installation
+      env:  
+         KUBESEAL: 0.12.5
+      run:  echo "downloading kubeseal ${KUBESEAL}" && curl -sL https://github.com/bitnami-labs/sealed-secrets/releases/download/v${KUBESEAL}/kubeseal-linux-amd64 \ -o /usr/local/bin/kubeseal && chmod +x /usr/local/bin/kubeseal && kubeseal --version
+
+    - name: yq Installation
+      run:  echo "downloading yq" && curl -sL https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64 \ -o /usr/local/bin/yq && chmod +x /usr/local/bin/yq && yq --version
+    - name: jq Installation
+      run:  echo "downloading jq" && curl -sL https://github.com/stedolan/jq/releases/latest/download/jq-linux64 \ -o /usr/local/bin/jq && chmod +x /usr/local/bin/jq && jq --version
     - name: Tanzu Install
       run: |
          curl -H "Accept: application/vnd.github.v3.raw" \-L https://api.github.com/repos/vmware-tanzu/community-edition/contents/hack/get-tce-release.sh | \bash -s v0.9.1 linux
