--- a/.github/workflows/mvn-poc.yml
+++ b/.github/workflows/mvn-poc.yml
@@ -29,7 +29,13 @@ jobs:
       env:  
         KUBECTL: 1.18.2
       run:  
-         echo "downloading kubectl ${KUBECTL}" \ && curl -sL https://storage.googleapis.com/kubernetes-release/release/v${KUBECTL}/bin/linux/amd64/kubectl \ -o /usr/local/bin/kubectl && chmod +x /usr/local/bin/kubectl && kubectl version --client
+        # echo "downloading kubectl ${KUBECTL}" \ && curl -sL https://storage.googleapis.com/kubernetes-release/release/v${KUBECTL}/bin/linux/amd64/kubectl \ -o /usr/local/bin/kubectl && chmod +x /usr/local/bin/kubectl && kubectl version --client
+         curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
+         sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
+         chmod +x kubectl
+         mkdir -p ~/.local/bin/kubectl
+         mv ./kubectl ~/.local/bin/kubectl
+         echo kubectl version --client      
     - name: Install Kustomize 
       env:  
          KUSTOMIZE: 3.5.5
