--- a/.github/workflows/mvn-poc.yml
+++ b/.github/workflows/mvn-poc.yml
@@ -35,7 +35,7 @@ jobs:
          chmod +x kubectl
          mkdir -p ~/.local/bin/kubectl
          mv ./kubectl ~/.local/bin/kubectl
-         echo kubectl version --client      
+         kubectl version --client      
     - name: Install Kustomize 
       env:  
          KUSTOMIZE: 3.5.5
