--- a/.github/workflows/mvn-poc.yml
+++ b/.github/workflows/mvn-poc.yml
@@ -29,8 +29,9 @@ jobs:
       env:  
         KUBECTL: 1.18.2
       run:  
-        # echo "downloading kubectl ${KUBECTL}" \ && curl -sL https://storage.googleapis.com/kubernetes-release/release/v${KUBECTL}/bin/linux/amd64/kubectl \ -o /usr/local/bin/kubectl && chmod +x /usr/local/bin/kubectl && kubectl version --client
-         curl -LO https://dl.k8s.io/release/v1.23.0/bin/linux/amd64/kubectl
+         curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
+         curl -LO "https://dl.k8s.io/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl.sha256"
+         echo "$(<kubectl.sha256)  kubectl" | sha256sum --check
          sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
          chmod +x kubectl
          mkdir -p ~/.local/bin/kubectl
