--- a/.github/workflows/mvn-poc.yml
+++ b/.github/workflows/mvn-poc.yml
@@ -38,8 +38,10 @@ jobs:
     - name: Install Kustomize 
       env:  
          KUSTOMIZE: 3.5.5
-      run:  
-         echo "downloading kustomize ${KUSTOMIZE}" \ && curl -sL https://github.com/kubernetes-sigs/kustomize/releases/download/kustomize%2Fv${KUSTOMIZE}/kustomize_v${KUSTOMIZE}_linux_amd64.tar.gz | \ tar xz && mv kustomize /usr/local/bin/kustomize && kustomize version
+      run: | 
+         echo "downloading kustomize ${KUSTOMIZE}" 
+         curl -sL https://github.com/kubernetes-sigs/kustomize/releases/download/kustomize%2Fv${KUSTOMIZE}/kustomize_v${KUSTOMIZE}_linux_amd64.tar.gz
+         tar xz && mv kustomize /usr/local/bin/kustomize && kustomize version
     - name: Helm Installation
       env:  
          HELM_V2: 2.16.7
