--- a/.github/workflows/mvn-poc.yml
+++ b/.github/workflows/mvn-poc.yml
@@ -52,7 +52,13 @@ jobs:
     - name: Helm Installation
       env:  
          HELM_V2: 2.16.7
-      run:  echo "downloading helm ${HELM_V2}" && curl -sSL https://get.helm.sh/helm-v${HELM_V2}-linux-amd64.tar.gz | \ tar xz && mv linux-amd64/helm /usr/local/bin/helm && rm -rf linux-amd64 && helm version --client
+      run: |
+         echo "downloading helm ${HELM_V2}" 
+         curl -sSL https://get.helm.sh/helm-v${HELM_V2}-linux-amd64.tar.gz 
+         tar zxvf helm-v${HELM_V2}-linux-amd64.tar.gz
+         mv linux-amd64/helm /usr/local/bin/helm 
+         rm -rf linux-amd64 
+         helm version --client
  
     - name: Helm V3 Installation
       env:  
