--- a/.github/workflows/mvn-poc.yml
+++ b/.github/workflows/mvn-poc.yml
@@ -50,9 +50,11 @@ jobs:
            # Add permission for executable
            chmod +x "${BIN_DIR}/kustomize"
     - name: Helm V3 Installation
-      env:  
-         HELM_V3: 3.2.1
-      run:  echo "downloading helm ${HELM_V3}" && curl -sSL https://get.helm.sh/helm-v${HELM_V3}-linux-amd64.tar.gz | \ tar xz && mv linux-amd64/helm /usr/local/bin/helmv3 && rm -rf linux-amd64 && helmv3 version
+      run:  |
+         curl -sSL https://get.helm.sh/helm-v3.2.1-linux-amd64.tar.gz 
+         tar xzvf helm-v3.2.1-linux-amd64.tar.gz 
+         mv helm-v3.2.1-linux-amd64.tar.gz/helm /usr/local/bin/helmv3 
+         helmv3 version
  
     - name: KubeVal Installation
       env:  
