--- a/.github/workflows/mvn-poc.yml
+++ b/.github/workflows/mvn-poc.yml
@@ -69,7 +69,12 @@ jobs:
     - name: Kubeaudit Installation 
       env:  
           KUBEAUDIT: 0.11.5
-      run:  echo "downloading kubeaudit ${KUBEAUDIT}" && curl -sSL https://github.com/Shopify/kubeaudit/releases/download/v${KUBEAUDIT}/kubeaudit_${KUBEAUDIT}_linux_amd64.tar.gz | \ tar xz && mv kubeaudit /usr/local/bin/kubeaudit && kubeaudit --help
+      run: |
+         echo "downloading kubeaudit ${KUBEAUDIT}" 
+         curl -sLO https://github.com/Shopify/kubeaudit/releases/download/v${KUBEAUDIT}/kubeaudit_${KUBEAUDIT}_linux_amd64.tar.gz
+         tar xzvf kubeaudit_${KUBEAUDIT}_linux_amd64.tar.gz
+         mv kubeaudit /usr/local/bin/kubeaudit 
+         kubeaudit --help
 
     - name: Conftest Installation
       env:  
