--- a/.github/workflows/mvn-poc.yml
+++ b/.github/workflows/mvn-poc.yml
@@ -79,12 +79,17 @@ jobs:
     - name: Conftest Installation
       env:  
          CONFTEST: 0.19.0
-      run:  echo "downloading conftest ${CONFTEST}" && curl -sL https://github.com/open-policy-agent/conftest/releases/download/v${CONFTEST}/conftest_${CONFTEST}_Linux_x86_64.tar.gz | \ tar xz && mv conftest /usr/local/bin/conftest && conftest --version
+      run: |
+         echo "downloading conftest ${CONFTEST}" 
+         curl -sLO https://github.com/open-policy-agent/conftest/releases/download/v${CONFTEST}/conftest_${CONFTEST}_Linux_x86_64.tar.gz
+         tar xzvf conftest_${CONFTEST}_Linux_x86_64.tar.gz
+         mv conftest /usr/local/bin/conftest 
+         conftest --version
 
     - name: Kubeseal Installation
       env:  
          KUBESEAL: 0.12.5
-      run:  echo "downloading kubeseal ${KUBESEAL}" && curl -sL https://github.com/bitnami-labs/sealed-secrets/releases/download/v${KUBESEAL}/kubeseal-linux-amd64 \ -o /usr/local/bin/kubeseal && chmod +x /usr/local/bin/kubeseal && kubeseal --version
+      run: echo "downloading kubeseal ${KUBESEAL}" && curl -sLO https://github.com/bitnami-labs/sealed-secrets/releases/download/v${KUBESEAL}/kubeseal-linux-amd64 \ -o /usr/local/bin/kubeseal && chmod +x /usr/local/bin/kubeseal && kubeseal --version
 
     - name: yq Installation
       run:  echo "downloading yq" && curl -sL https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64 \ -o /usr/local/bin/yq && chmod +x /usr/local/bin/yq && yq --version
