--- a/.github/workflows/mvn-poc.yml
+++ b/.github/workflows/mvn-poc.yml
@@ -87,9 +87,10 @@ jobs:
          conftest --version
 
     - name: Kubeseal Installation
-      env:  
-         KUBESEAL: 0.17.1
-      run: echo "downloading kubeseal ${KUBESEAL}" && curl -sLO https://github.com/bitnami-labs/sealed-secrets/releases/download/v0.17.1/kubeseal-0.17.1-linux-arm.tar.gz \ -o /usr/local/bin/kubeseal && chmod +x /usr/local/bin/kubeseal && kubeseal --version
+      run: |
+        curl -sLO https://github.com/bitnami-labs/sealed-secrets/releases/download/v0.16.0/kubeseal-linux-amd64
+        sudo install -m 755 kubeseal /usr/local/bin/kubeseal
+        kubeseal --version
 
     - name: yq Installation
       run:  echo "downloading yq" && curl -sL https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64 \ -o /usr/local/bin/yq && chmod +x /usr/local/bin/yq && yq --version
