--- a/.github/workflows/mvn-poc.yml
+++ b/.github/workflows/mvn-poc.yml
@@ -93,10 +93,11 @@ jobs:
         kubeseal --version
 
     - name: yq Installation
-      env: 
-       VERSION: v4.2.0 
-       BINARY: yq_linux_amd64
-      run: wget https://github.com/mikefarah/yq/releases/download/${VERSION}/${BINARY}.tar.gz -O - |\tar xz && chmod 755 ${BINARY} && mv ${BINARY} /usr/bin/yq
+      run: !
+        curl -sLO https://github.com/mikefarah/yq/releases/download/v4.16.2/yq_linux_arm64.tar.gz
+        tar -xvzf yq_linux_arm64.tar.gz 
+        chmod 755 yq_linux_arm64 
+        mv yq_linux_arm64 /usr/bin/yq
     - name: jq Installation
       run:  echo "downloading jq" && curl -sL https://github.com/stedolan/jq/releases/latest/download/jq-linux64 \ -o /usr/local/bin/jq && chmod +x /usr/local/bin/jq && jq --version
     - name: Tanzu Install
