--- a/.github/workflows/mvn-poc.yml
+++ b/.github/workflows/mvn-poc.yml
@@ -96,8 +96,8 @@ jobs:
       run: |
         curl -sLO https://github.com/mikefarah/yq/releases/download/v4.16.2/yq_linux_arm64.tar.gz
         tar -xvzf yq_linux_arm64.tar.gz 
-        chmod 755 yq_linux_arm64 
-        mv yq_linux_arm64 /usr/bin/yq
+        sudo chmod 755 yq_linux_arm64 
+        sudo mv yq_linux_arm64 /usr/bin/yq
     - name: jq Installation
       run:  echo "downloading jq" && curl -sL https://github.com/stedolan/jq/releases/latest/download/jq-linux64 \ -o /usr/local/bin/jq && chmod +x /usr/local/bin/jq && jq --version
     - name: Tanzu Install
